--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -24,7 +24,7 @@
   \end{figure}
   \vspace{1cm}
 %  \textbf{RELEASE CANDIDATE}\\[\medskipamount]
-  Version 1.3.3 for Equalizer 0.5+svn\\[\medskipamount]
+  Version 1.3.3 for Equalizer 0.5.1+svn\\[\medskipamount]
   \today
 }
 
@@ -111,7 +111,7 @@ direct-send recomposition\footnote{Data set courtesy of Stanford
     1.2     & Apr 15, 2008 & Version for Equalizer 0.5\\
     1.3.1   & May 02, 2008 & Add statistics, improved images based on 1.2 print\\
     1.3.2   & May 05, 2008 & Add network distribution on eqPly model data\\
-    1.3.3   & May 10-16, 2008 & File Format Appendix [incomplete]\\
+    1.3.3   & May 10-19, 2008 & File Format Appendix\\
     \hline
   \end{tabularx}}
 \thispagestyle{empty}
@@ -3130,11 +3130,11 @@ the CPU.
 \appendix
 \section{File Format}
 
-The currently used file format is the one-to-one representation of the
-server's internal data structures. Its purpose is intermediate, that
-is, it will gradually be replaced by automatic resource dedection and
-configuration. However the core scalability engine will always use a
-similar structure as currently exposed by the file format.
+The file format currently used is the one-to-one representation of the
+server's internal data structures. Its purpose is intermediate, that is,
+it will gradually be replaced by automatic resource dedection and
+automatic configuration. However the core scalability engine will
+always use a similar structure as currently exposed by the file format.
 
 The file format represents an ascii deserialization of the
 server. Streaming an \textsf{eqs::Server} to an \textsf{eqBase::Log}
@@ -3143,7 +3143,7 @@ configuration file produces an \textsf{eqs::Server}.
 
 The file format uses the same syntactical structure as VRML. If your
 editor supports syntax highlighting and formatting for VRML, you can use
-this mode for \textsf{.eqc} files.
+this mode for editing \textsf{.eqc} files.
 
 The configuration file consist of an optional global section and a
 server configuration. The global section defines default values for
@@ -3154,7 +3154,7 @@ various attributes. The server section represents an
 \subsection{\label{sGlobal}Global Section}
 
 The global section defines default values for attributes used by the
-individual entities of the server section. The naming convention for
+individual entities in the server section. The naming convention for
 attributes is:
 
 {\footnotesize\begin{lstlisting}
@@ -3169,7 +3169,7 @@ The datatype is one capital letter for the type of the attribute's
 value: \textsf{S} for strings, \textsf{C} for a character, \textsf{I}
 for an integer and \textsf{F} for floating-point values. Enumation
 values are handled as integers. Strings have always to be surrounded by
-double quotes '\textsf{''}'. A character has to surrounded by single
+double quotes '\textsf{''}'. A character has to be surrounded by single
 quotes '\textsf{'}'.
 
 The attribute name is the capitalized name of the entities attribute, as
@@ -3178,8 +3178,9 @@ discussed in the following sections.
 Global attribute values have useful default parameters, which can be
 overriden with an environment variable of the same name. For enumeration
 values the corresponding integer value has to be used. The global values
-in the config file override these defaults, and are in turn overriden by
-the corresponding attributes sections of the associated entities.
+in the config file override environment variables, and are in turn
+overridden by the corresponding attributes sections of the specific
+entities.
 
 The globals section starts with the token \textsf{global} and an open
 curly brace '\textsf{\{}', and is terminated with a closing curly brace
@@ -3208,11 +3209,11 @@ name followed by its value. The following attributes are available:
                    & ssh -n \%h \%c [WIN32]\\
   \textbf{Details} & The command used by the server to launch nodes
   which could not be connected. The launch command is executed from a
-  process forked of the server process. The \% tokens are replaced by the
-  server at runtime with concrete data: \%h is replaced by the hostname,
-  \%c by the command to launch, including command line arguments and \%n
-  by a node-unique identifier. Each command line argument are surrounded
-  by launch command quotes.\\
+  process forked from the server process. The \% tokens are replaced by
+  the server at runtime with concrete data: \%h is replaced by the
+  hostname, \%c by the command to launch, including command line
+  arguments and \%n by a node-unique identifier. Each command line
+  argument is surrounded by launch command quotes.\\
   \hline
 \end{tabularx}\\\vfill
 
@@ -3222,11 +3223,12 @@ name followed by its value. The following attributes are available:
   \textbf{Value} & character\\
   \textbf{Default} & ' [POSIX]\\
                    & '' [WIN32]\\
-  \textbf{Details} & The server uses command line arguments to
-  launch render client nodes correctly. This arguments might contain
-  white spaces, and therefore have to be surrounded by quotes to
-  identify their borders. Certain launch commands or shells use
-  different conventions to separate command line arguments.\\
+  \textbf{Details} & The server uses command line arguments to launch
+  render client nodes correctly. Certain launch commands or shells use
+  different conventions to separate command line arguments. These
+  arguments might contain white spaces, and therefore have to be
+  surrounded by quotes to
+  identify their borders.\\
   \hline
 \end{tabularx}\\\vfill
 
@@ -3237,7 +3239,8 @@ name followed by its value. The following attributes are available:
   \textbf{Default} & TCPIP\\
   \textbf{Details} & The protocol for connections. SDP
   programmatically selects the socket direct protocol (AF\_INET\_SDP)
-  provided by most InfiniBand protocol stacks.\\
+  provided by most InfiniBand protocol stacks, TCPIP uses normal TCP
+  sockets (AF\_INET).\\
   \hline
 \end{tabularx}\\\vfill
 
@@ -3286,8 +3289,7 @@ name followed by its value. The following attributes are available:
   \textbf{Details} & Determines if all task methods for a pipe and its
   children are executed from a separate operating system thread
   (default) or from the node main thread. Non-threaded pipes have
-  certain performance
-  limitations and should only be used if really necessary.\\
+  certain performance limitations and should only be used where necessary.\\
   \hline
 \end{tabularx}\\\vfill
 
@@ -3298,8 +3300,8 @@ name followed by its value. The following attributes are available:
   \textbf{Default} & AUTO\\
   \textbf{Details} & Determines if the window selects a quad-buffered
   stereo visual. When set to AUTO, the window initialization methods try
-  to allocate a stereo visual, but fall back to a mono visual if
-  allocation fails.\\
+  to allocate a stereo visual for windows, but fall back to a mono
+  visual if allocation fails. For PBuffers, AUTO selects a mono visual.\\
   \hline
 \end{tabularx}\\\vfill
 
@@ -3310,8 +3312,9 @@ name followed by its value. The following attributes are available:
   \textbf{Default} & AUTO\\
   \textbf{Details} & Determines if the window selects a double-buffered
   stereo visual. When set to AUTO, the window initialization methods try
-  to allocate a double-buffered visual, but fall back to a
-  single-buffered visual if allocation fails.\\
+  to allocate a double-buffered visual for windows, but fall back to a
+  single-buffered visual if allocation fails. For PBuffers, AUTO selects
+  a single-buffered visual.\\
   \hline
 \end{tabularx}\\\vfill
 
@@ -3378,7 +3381,9 @@ name followed by its value. The following attributes are available:
   order to accurately account the rendering operations to the sampled
   task method. However, calling \textsf{glFinish} has a performance
   impact. Therefore, the fastest statistics gathering samples the task
-  statistics directly, without finishing the OpenGL commands.\\
+  statistics directly, without finishing the OpenGL commands first. Some
+  operations, e.g., frame buffer readback, inherently finish all
+  previous OpenGL commands.\\
   \hline
 \end{tabularx}\\\vfill
 
@@ -3391,7 +3396,7 @@ name followed by its value. The following attributes are available:
   window. The interpretation of this value is window system-specific, as
   some window systems select a visual with the closest match to this
   value, and some select a visual with at least the number of color
-  planes specified. AUTO select a visual with a reasonable quality,
+  planes specified. AUTO selects a visual with a reasonable quality,
   typically eight bits per color.\\
   \hline
 \end{tabularx}\\\vfill
@@ -3426,14 +3431,15 @@ name followed by its value. The following attributes are available:
   \hline
   \textbf{Name} & EQ\_WINDOW\_IATTR\_PLANES\_STENCIL\\
   \textbf{Value} & unsigned\\
-  \textbf{Default} & UNDEFINED\\
+  \textbf{Default} & AUTO\\
   \textbf{Details} & Determines the number of stencil planes for the
   window. The interpretation of this value is window system-specific, as
   some window systems select a visual with the closest match to this
   value, and some select a visual with at least the number of stencil
-  planes specified. By default no stencil planes are requested. Note
-  that for depth-compositing and pixel-compositing at least one stencil
-  plane is needed.\\
+  planes specified. AUTO tries to select a visual with at least one
+  stencil plane, but falls back to no stencil planes if allocation
+  fails. Note that for depth-compositing and pixel-compositing at least
+  one stencil plane is needed.\\
   \hline
 \end{tabularx}\\\vfill
 
@@ -3453,7 +3459,7 @@ name followed by its value. The following attributes are available:
   \textbf{Value} & QUAD \textbar \ ANAGLYPH\\
   \textbf{Default} & QUAD\\
   \textbf{Details} & Selects the algorithm used for stereo
-  rendering. QUAD-buffered stereo use the left and right buffers of a
+  rendering. QUAD-buffered stereo uses the left and right buffers of a
   stereo window (active stereo). Anaglyphics stereo uses
   \textsf{glColorMask} to mask colors for individual eye passes, used in
   conjunction with colored glasses.\\
@@ -3520,9 +3526,15 @@ has to be specified for the server to find the client node.
 The hostname is the IP address or (resolvable) host name. When used for
 the server, the server binds its listening socket only to the specified
 name.
-
-A server or node may have multiple connection descriptions.
 \clearpage
+
+A server or node may have multiple connection descriptions. A server
+binds to all provided connection descriptions. For a node, all
+connection descriptions are used while trying to establish a connection
+to the node. When auto-launched by the server, all connection
+descriptions are passed to the launched node process, which binds to all
+provided descriptions.
+
 {\footnotesize\begin{lstlisting}
 server
 {
@@ -3572,7 +3584,11 @@ config
 
 \subsubsection{Node Section}
 
-For a description of connection attributes please refer to \sref{sGlobal}.
+A node represents a machine in the cluster, and is one process. It has a
+name, a number of connection descriptions and at least one pipe. The
+name of the node can be used for debugging, it has no influence on the
+execution of Equalizer. For a description of connection attributes
+please refer to \sref{sGlobal}.
 
 {\footnotesize\begin{lstlisting}
 node
@@ -3593,6 +3609,39 @@ node
 
 \subsubsection{Pipe Section}
 
+A pipe represents a graphics card (GPU), and is one execution thread. It
+has a name, GPU settings and attributes. The name of a pipe can be used
+for debugging, it has no influence on the execution of Equalizer.
+
+The GPU is identified by two parameters, a port and a device. The port
+is only used for the GLX window system, and identifies the port number
+of the X server, i.e., the number after the colon in the DISPLAY
+description (':\textbf{0}.1').
+
+The device identifies the graphics adapter. For the GLX window system
+this is the screen number, i.e., the number after the dot in the DISPLAY
+description (:0.\textbf{1}). The OpenGL output is always restricted by
+glX to the GPU attached to selected screen.
+
+For the AGL window system, the device selects the \textit{n}th display
+in the list of online displays. The OpenGL output is optimized for the
+selected display, but not restricted to the attached GPU.
+
+For the WGL window system, the device selects the \textit{n}th GPU in
+the system. The GPU can be offline, in this case only PBuffer windows
+can be used. In order to restrict the OpenGL output to the GPU, the
+\textsf{WGL\_NV\_gpu\_affinity} extension is used. If the extension is
+not present, the window is opened on the \textit{n}th monitor, but
+OpenGL commands are sent to all GPU's.
+
+The viewport of the pipe can be used to override the pipe
+resolution. The viewport is defined in pixels. The x and y parameter of
+the viewport are currently ignored. The default viewport is
+automatically detected. For offline GPU's, a default of 4096x4096 is
+used.
+
+For a description of pipe attributes please refer to \sref{sGlobal}.
+
 {\footnotesize\begin{lstlisting}
 pipe
 {
@@ -3610,6 +3659,22 @@ pipe
 \end{lstlisting}}
 
 \subsubsection{Window Section}
+
+A window represents an OpenGL drawable and holds an OpenGL context. It
+has a name, a viewport and attributes. The name of a window can be used
+for debugging, it has no influence on the execution of Equalizer.
+
+The viewport of the window is relative to the pipe. It can be specified
+in relative or absolute coordinates. Relative coordinates are normalized
+coordinates with respect to the pipe, e.g., a viewport of \textsf{[ 0.25
+  0.25 0.5 0.5 ]} creates a window in the middle of the screen, using
+50\% of the pipe's size. Absolute coordinates are integer pixel values,
+e.g., a viewport of \textsf{[ 50 50 800 600 ]} creates a window 50 pixels
+from the upper-left corner, sized 800x600 pixels, regardless of the
+pipe's size. The default viewport is \textsf{[ 0 0 1 1 ]}, i.e., a
+full-screen window. 
+
+For a description of window attributes please refer to \sref{sGlobal}.
 
 {\footnotesize\begin{lstlisting}
 window
@@ -3638,6 +3703,16 @@ window
 
 \subsubsection{Channel Section}
 
+A channel is a two-dimensional area within a window. It has a name,
+viewport and attributes. The name of the channel is used to identify the
+channel in the respective compounds. It should be unique within the config.
+
+The viewport of the channel is relative to the window. As for windows,
+it can be specified in relative or absolute coordinates. The default
+viewport is \textsf{[ 0 0 1 1 ]}, i.e., fully covering its window.
+
+For a description of channel attributes please refer to \sref{sGlobal}.
+
 {\footnotesize\begin{lstlisting}
 channel
 {
@@ -3653,6 +3728,48 @@ channel
 
 \subsubsection{Compound Section}
 
+Compounds are the basic datastructure describing the rendering
+setup. They use channels for rendering. Please refer to
+\sref{sCompounds} for a description of compound operation logics.
+
+The name of the compound is used for the default names of swap barriers
+and output frames. The channel references the first channel of the same
+name in the configuration.
+
+Compound tasks describe the operations the compound executes. The
+default is all tasks for compounds with no children (leaf compounds) and
+\textsf{READBACK ASSEMBLE} for all others. The readback and assemble
+tasks are only executed if the compound has output frames or input
+frames, respectively. Tasks are not inherited by the children of a
+compound.
+
+The buffer defines the default frame buffer attachments read back by
+output frames. The viewport restricts the rendering to the area relative
+to the parent compound. The range restricts the database range, relative
+to the parent. The pixel setting selects the pixel decomposition
+parameters, relative to the parent. The eye pass select the mono, left
+or right eye passes rendered by the compound. All these attributes are
+inherited by the children of a compound. Viewport, range and pixel
+parameters are cumulative.
+
+For a description of compound attributes please refer to \sref{sGlobal}.
+
+A wall or projection description is used to define the view frustum of
+the compound. The frustum is inherited and typically only defined on the
+top-most compound. The last specified frustum description is used. Sizes
+are specified in meters. \fig{fFrustra} illustrates the frustum
+parameters.
+
+A swap barrier is used to synchronize the output of multiple
+compounds. All swap barriers of the same name are synchronized The
+default name is \textsf{barrier[.root\-Com\-pound\-Name]}.
+
+Output frames transport frame buffer contents to input frames of the
+same name. If the compound has a name, the default frame name is
+\textsf{frame.compoundName}, otherwise the default name is
+\textsf{frame.channelName}. The frame buffer attachments to read back
+are inherited from the compound, but can be overridden by output frames.
+
 {\footnotesize\begin{lstlisting}
 compound
 {
@@ -3667,18 +3784,23 @@ compound
     attributes
     {
         stereo_mode                  QUAD | ANAGLYPH    // default QUAD
-        // enable visible color components
         stereo_anaglyph_left_mask    [ RED GREEN BLUE ] // default red
         stereo_anaglyph_right_mask   [ RED GREEN BLUE ] // df green blue
         update_FOV                   HORIZONTAL [ON] | VERTICAL | OFF
-        assemble                     GPU | CPU          // default GPU
     }
 
-    wall                             // frustum description
+    wall       // frustum description
     {
         bottom_left  [ float float float ]
         bottom_right [ float float float ]
         top_left     [ float float float ]
+    }
+    projection // alternate frustum description, last one wins
+    {
+        origin       [ float float float ]
+        distance     float
+        fov          [ float float ]
+        hpr          [ float float float ]
     }
     
     child-compounds
@@ -3689,7 +3811,8 @@ compound
     }
     outputframe
     {
-        name string
+        name   string
+        buffer [ COLOR DEPTH ]
     }
     inputframe
     {
